fixed spacing

--- a/public/style.css
+++ b/public/style.css
@@ -303,7 +303,7 @@ h2 {
 }
 
 #menu {
-  background-color: #ff9170;
+  background-color: #f78f1e;
 }
 
 .starter-template {
@@ -323,7 +323,7 @@ ul.navbar-nav li {
 @media only screen and (max-width:767px) {
   ul.navbar-nav {
     float: none;
-    background-color: #ff9170;
+    background-color: #f78f1e;
 
   }
 }
@@ -365,7 +365,7 @@ a.navbar-brand .fa-globe:hover {
 
 .navbar-inverse .navbar-toggle:hover,
 .navbar-inverse .navbar-toggle:focus {
-  background-color: #ff9170 !important;
+  background-color: #f78f1e !important;
 }
 
 .container {
@@ -717,7 +717,7 @@ progress::-webkit-progress-value {
 }
 
 #skills {
-  background-color: #ff9170;
+  background-color: #f78f1e;
 }
 
 .card {
@@ -726,4 +726,11 @@ progress::-webkit-progress-value {
 
 .mail {
   color: white;
+}
+
+.pdf {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 50px;
+  padding-top: 50px;
 }
